--- a/src/FFXIV_Vibe_Plugin/FFXIV_Vibe_Plugin.csproj
+++ b/src/FFXIV_Vibe_Plugin/FFXIV_Vibe_Plugin.csproj
@@ -12,7 +12,7 @@
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
     <IsPublishable>True</IsPublishable>
-    <TargetFramework>net9.0-windows7.0</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -32,9 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Buttplug" Version="3.0.1" />
-    <PackageReference Include="Buttplug.Client.Connectors.WebsocketConnector" Version="3.0.1" />
-    <PackageReference Include="DebounceThrottle" Version="2.0.0" />
+    <PackageReference Include="Buttplug" Version="4.0.0" />
+    <PackageReference Include="DebounceThrottle" Version="3.0.1" />
     <PackageReference Include="deniszykov.WebSocketListener" Version="4.2.16" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
