--- a/src/FFXIV_Vibe_Plugin/FFXIV_Vibe_Plugin.csproj
+++ b/src/FFXIV_Vibe_Plugin/FFXIV_Vibe_Plugin.csproj
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="Dalamud.Plugin.Bootstrap.targets" />
-
+<Project Sdk="Dalamud.NET.Sdk/13.0.0">
   <PropertyGroup>
     <Authors>Kaciexx</Authors>
     <Company></Company>
-    <Version>3.2.1.0</Version>
+    <Version>3.3.0.0</Version>
     <Description>Plugin that let you vibe your controller or toys</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/Aspher0/FFXIV_Vibe_Plugin</PackageProjectUrl>
@@ -36,9 +34,5 @@
     <PackageReference Include="DebounceThrottle" Version="3.0.1" />
     <PackageReference Include="deniszykov.WebSocketListener" Version="4.2.16" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="DalamudPackager" Version="12.0.0" />
   </ItemGroup>
 </Project>
