--- a/src/FFXIV_Vibe_Plugin/FFXIV_Vibe_Plugin.csproj
+++ b/src/FFXIV_Vibe_Plugin/FFXIV_Vibe_Plugin.csproj
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Dalamud.NET.Sdk/13.0.0">
+<Project Sdk="Dalamud.NET.Sdk/14.0.1">
   <PropertyGroup>
     <Authors>Kaciexx</Authors>
     <Company></Company>
-    <Version>3.3.0.0</Version>
+    <Version>3.4.0.0</Version>
     <Description>Plugin that let you vibe your controller or toys</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/Aspher0/FFXIV_Vibe_Plugin</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
     <IsPublishable>True</IsPublishable>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net10.0-windows7.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -33,6 +33,7 @@
     <PackageReference Include="Buttplug" Version="4.0.0" />
     <PackageReference Include="DebounceThrottle" Version="3.0.1" />
     <PackageReference Include="deniszykov.WebSocketListener" Version="4.2.16" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="NoireLib" Version="1.3.3" />
   </ItemGroup>
 </Project>
